--- a/js-producer-account/src/main/resources/public/show.html
+++ b/js-producer-account/src/main/resources/public/show.html
@@ -3,90 +3,94 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="../static/jquery-1.8.3.js"></script>
+    <script type="text/javascript">
+        $(function () {
+
+            $.ajax({
+                url:"random.action",
+                success:function(k){
+                    console.log(k);
+                    $("#yzms").attr("value",k);
+                    drawPic();
+                }
+            });
+
+            $("#img").on("click",function(){
+                var _this=$(this);
+                $.ajax({
+                    url:"random.action",
+                    success:function(k){
+                        console.log(k);
+                        $("#yzms").attr("value",k);
+                        drawPic();
+                    }
+                })
+            });
+            /**生成一个随机数**/
+            function randomNum(min,max){
+                return Math.floor( Math.random()*(max-min)+min);
+            }
+            /**生成一个随机色**/
+            function randomColor(min,max){
+                var r = randomNum(min,max);
+                var g = randomNum(min,max);
+                var b = randomNum(min,max);
+                return "rgb("+r+","+g+","+b+")";
+            }
+
+
+            /**绘制验证码图片**/
+            function drawPic(){
+                var canvas=document.getElementById("canvas");
+                var width= canvas.width;     //canvas.width;
+                var height= canvas.height;        //canvas.height;
+                var ctx = canvas.getContext('2d');
+                ctx.textBaseline = 'bottom';
+
+                /**绘制背景色**/
+                ctx.fillStyle = randomColor(180,240); //颜色若太深可能导致看不清
+                ctx.fillRect(0,0,width,height);
+                /**绘制文字**/
+
+                /*   for(var i=0; i<4; i++){ */
+                var txt = $("#yzms").attr("value");
+                ctx.fillStyle = randomColor(50,160);  //随机生成字体颜色
+                ctx.font = randomNum(15,20)+'px SimHei'; //随机生成字体大小
+                var x = 20;
+                var y = randomNum(20,30);
+                var deg = randomNum(-45, 45);
+                //修改坐标原点和旋转角度
+                ctx.translate(x,y);
+                ctx.rotate(deg*Math.PI/180);
+                ctx.fillText(txt, 0,0);
+                //恢复坐标原点和旋转角度
+                ctx.rotate(-deg*Math.PI/180);
+                ctx.translate(-x,-y);
+                /*    } */
+                /* /**绘制干扰线**/
+                for(var i=0; i<8; i++){
+                    ctx.strokeStyle = randomColor(40,180);
+                    ctx.beginPath();
+                    ctx.moveTo( randomNum(0,width), randomNum(0,height) );
+                    ctx.lineTo( randomNum(0,width), randomNum(0,height) );
+                    ctx.stroke();
+                }
+                /**绘制干扰点**/
+                /*  for(var i=0; i<100; i++){
+                   ctx.fillStyle = randomColor(0,255);
+                   ctx.beginPath();
+                   ctx.arc(randomNum(0,width),randomNum(0,height), 1, 0, 2*Math.PI);
+                   ctx.fill();
+                 }  */
+            }
+        });
+    </script>
 </head>
 <body>
 <canvas id="canvas" width="70" height="34"></canvas>
 <a href="random.action" id="img" class="pull-right" style="line-height: 34px;text-indent: 10px;">换一张</a>
 <input type="text" class="form-control" id="yzms" name="yzms" readonly = "readonly" style="display:none" >
-<span style="display: none">王杰是傻逼</span>
+<span>王杰是傻逼</span>
 </body>
-<script type="text/javascript">
-    $.ajax({
-        url:"random.action",
-        success:function(k){
-            console.log(k);
-            $("#yzms").attr("value",k);
-            drawPic();
-        }
-    });
-
-    $("#img").onclick(function(){
-        var _this=$(this);
-        $.ajax({
-            url:"random.action",
-            success:function(k){
-                console.log(k);
-                $("#yzms").attr("value",k);
-                drawPic();
-            }
-        })
-    });
-    /**生成一个随机数**/
-    function randomNum(min,max){
-        return Math.floor( Math.random()*(max-min)+min);
-    }
-    /**生成一个随机色**/
-    function randomColor(min,max){
-        var r = randomNum(min,max);
-        var g = randomNum(min,max);
-        var b = randomNum(min,max);
-        return "rgb("+r+","+g+","+b+")";
-    }
-
-
-    /**绘制验证码图片**/
-    function drawPic(){
-        var canvas=document.getElementById("canvas");
-        var width= 70;     //canvas.width;
-        var height= 35;        //canvas.height;
-        var ctx = canvas.getContext('2d');
-        ctx.textBaseline = 'bottom';
-
-        /**绘制背景色**/
-        ctx.fillStyle = randomColor(180,240); //颜色若太深可能导致看不清
-        ctx.fillRect(0,0,width,height);
-        /**绘制文字**/
-
-        /*   for(var i=0; i<4; i++){ */
-        var txt = $("#yzms").attr("value");
-        ctx.fillStyle = randomColor(50,160);  //随机生成字体颜色
-        ctx.font = randomNum(15,20)+'px SimHei'; //随机生成字体大小
-        var x = 20;
-        var y = randomNum(20,30);
-        var deg = randomNum(-45, 45);
-        //修改坐标原点和旋转角度
-        ctx.translate(x,y);
-        ctx.rotate(deg*Math.PI/180);
-        ctx.fillText(txt, 0,0);
-        //恢复坐标原点和旋转角度
-        ctx.rotate(-deg*Math.PI/180);
-        ctx.translate(-x,-y);
-        /*    } */
-        /* /**绘制干扰线**/
-        for(var i=0; i<8; i++){
-            ctx.strokeStyle = randomColor(40,180);
-            ctx.beginPath();
-            ctx.moveTo( randomNum(0,width), randomNum(0,height) );
-            ctx.lineTo( randomNum(0,width), randomNum(0,height) );
-            ctx.stroke();
-        }
-        /**绘制干扰点**/
-        /*  for(var i=0; i<100; i++){
-           ctx.fillStyle = randomColor(0,255);
-           ctx.beginPath();
-           ctx.arc(randomNum(0,width),randomNum(0,height), 1, 0, 2*Math.PI);
-           ctx.fill();
-         }  */
-    }
-</script>
 </html>
